--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an audio engineer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Federal Way, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Making music</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>develop sound in video games and music</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Federal Way, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to develop the future.</p>
     </section>
 
     <footer id="footer">
